[gd_scene load_steps=5 format=3 uid="uid://c4iu4yahj6hiw"]

[ext_resource type="Script" path="res://scenes/lobby/scripts/lobby_ui.gd" id="1_06nlp"]
[ext_resource type="Script" path="res://scenes/lobby/scripts/options_vbox_container.gd" id="2_qnwot"]
[ext_resource type="Script" path="res://scenes/lobby/scripts/host_vbox_container.gd" id="3_2mwn7"]
[ext_resource type="Script" path="res://scenes/lobby/scripts/join_vbox_container.gd" id="4_pgbkf"]

[node name="Lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_06nlp")

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 2
offset_left = 25.0
offset_top = 191.0
offset_right = 395.0
offset_bottom = 235.0
placeholder_text = "Name"

[node name="OptionsVboxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 470.0
offset_right = -440.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1
script = ExtResource("2_qnwot")

[node name="OptionsLabel" type="Label" parent="OptionsVboxContainer"]
layout_mode = 2
text = "Options"
horizontal_alignment = 1

[node name="HostButton" type="Button" parent="OptionsVboxContainer"]
layout_mode = 2
text = "Host"

[node name="JoinButton" type="Button" parent="OptionsVboxContainer"]
layout_mode = 2
text = "Join"

[node name="HostVboxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 470.0
offset_right = -440.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1
script = ExtResource("3_2mwn7")

[node name="CodeLabel" type="Label" parent="HostVboxContainer"]
layout_mode = 2
text = "CODE: 12346"
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="HostVboxContainer"]
layout_mode = 2
text = "Start Game"

[node name="JoinVboxContainer" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 470.0
offset_right = -440.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1
script = ExtResource("4_pgbkf")

[node name="CodeLabel" type="TextEdit" parent="JoinVboxContainer"]
layout_mode = 2
text = "Type Code"
placeholder_text = "Type Code"

[node name="StartButton" type="Button" parent="JoinVboxContainer"]
layout_mode = 2
text = "Start Game"
